<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Employee Management</string>
    <string name="add_employee">Add Employee</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="designation">Designation</string>
    <string name="salary">Salary</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this employee?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_required_field">This field is required</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_invalid_salary">Invalid salary amount</string>
    <string name="employee_deleted">Employee deleted</string>
    <string name="undo">Undo</string>
</resources> 